  overwrite files without warning.
- Fixed issue #9541: Tutorial introduction incorrect.
- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9465: Data type mapping. Based on patch by: Friedel Hill.
- Fixed issue #9819: Let all components deal the ezcBaseAutoloadException
  properly.

1.1beta1 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added support for PostgreSQL and SQLite.
- Added support for default column values in the MySQL handler.
- Added feature #8744: Changed the ezcDbSchema::getSchema() method to
  return the schema as a reference, so that it can be modified properly.
- Fixed getting a PDOException when executing queries in the MySQL handler.
- Fixed issue #8650: No exception is thrown when writing database schema files
  to non-writable directories.
- Fixed issue #9322: PostgreSQL and SQLite handler issues.


1.0.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8900: Problem with auto increment and primary keys for MySQL
  because the skip_primary context was not reset for new tables.
- Added a new validator to check whether columns marked as 'auto_increment'
  actually have a primary key defined as well.
- Implemented FR #8901: Written schemas should indent the XML.
- Refactored the structs to use the new ezcBaseStruct class.


1.0.1 - Monday 19 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed a bug that an empty 'is null value' string in the database caused a 
  PHP warning. 


1.0 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Updated documentation and added the tutorial.


1.0rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes at all.

